--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<img src = ""/>
+	<h1 class="heading">Lokesh </h1>
+	<nav>
+		<ul>
+		<li>
+			Lists
+		</li>
+	</ul>
+	</nav>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
