--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<img src = ""/>
+	<img src = "" 
+		alt = "image"/>
 	<h1 class="heading">Lokesh </h1>
 	<nav>
 		<ul>
