--- a/main.html
+++ b/main.html
@@ -8,17 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<nav>
-	<img src = "" 
-		alt = "image"/>
-	<h1 class="heading">Lokesh </h1>
-	
+	<div> 
+		<h1> LOkesh
+		</h1>
+		<nav>
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Cristiano_Ronaldo_playing_for_Al_Nassr_FC_against_Persepolis%2C_September_2023_%28cropped%29.jpg/800px-Cristiano_Ronaldo_playing_for_Al_Nassr_FC_against_Persepolis%2C_September_2023_%28cropped%29.jpg"
+			alt="image"/>
+		
 		<ul>
-		<li>
-			Lists
-		</li>
-	</ul>
-	</nav>
+			<li>
+				viswateja
+			</li>
+			<li>
+				deepika
+			</li>
+			<li>
+				chandu
+			</li>
+		</ul>
+		
+			
+		</nav>
+	</div>
+
 	
     <script type="text/javascript" src="./script.js">
 </script>
