--- a/main.html
+++ b/main.html
@@ -8,29 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div> 
-		<h1> LOkesh
-		</h1>
-		<nav>
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Cristiano_Ronaldo_playing_for_Al_Nassr_FC_against_Persepolis%2C_September_2023_%28cropped%29.jpg/800px-Cristiano_Ronaldo_playing_for_Al_Nassr_FC_against_Persepolis%2C_September_2023_%28cropped%29.jpg"
-			alt="image"/>
-		
-		<ul>
-			<li>
-				viswateja
-			</li>
-			<li>
-				deepika
-			</li>
-			<li>
-				chandu
-			</li>
-		</ul>
-		
-			
-		</nav>
-	</div>
-
+	<h1 role="heading">Lokesh</h1>
+<nav role="navigation"></nav>
+<img role="img" src="https://cdn.pixabay.com/photo/2025/01/17/16/06/building-9340309_1280.jpg" alt="or, Podcaster, Traveler, Occasional amateur photographer of interesting things
+">
+<ul role="list">
+  <li role="listitem">dhkfbkdvfdb</li>
+  <li role="listitem">kerjbfkjadfbk</li>
+  <li role="listitem">arhfkasdjhkh</li>
+</ul>
+ 
+	
 	
     <script type="text/javascript" src="./script.js">
 </script>
